loxrs_interpreter/src/lox/interpreter/test/e2e/fail/class_early_init_return.lox
class Foo {
  init() {
    return 3;
  }
}
